Set right spacing to avoid border from touching body

--- a/src/components/Skill/Skill.module.css
+++ b/src/components/Skill/Skill.module.css
@@ -20,6 +20,7 @@
   gap: 15rem;
   border-bottom: 0.2rem solid rgb(0, 204, 255);
   border-radius: 2rem;
+  margin: 0 1rem;
   height: 100vh;
 }
 
@@ -29,7 +30,6 @@
   justify-content: center;
   align-items: center;
   gap: 3rem;
-  padding: 0 1rem;
   max-width: 35rem;
   min-width: 20rem;
   cursor: context-menu;
